--- a/src/app/pages/login/login-page.component.html
+++ b/src/app/pages/login/login-page.component.html
@@ -11,7 +11,7 @@
                         <div class="card-block">
                             <h2>Login</h2>
                           <div class="alert alert-danger" *ngIf="mode==1">
-                            <strong>Bas credentials ...</strong>
+                            <strong>Bad credentials ...</strong>
                           </div>
                           <form #f="ngForm" (ngSubmit)="onLogin(f.value)">
                                 <div class="form-group">
