--- a/src/app/pages/quiz/quiz-test/add-quiz/add-quiz.component.html
+++ b/src/app/pages/quiz/quiz-test/add-quiz/add-quiz.component.html
@@ -16,39 +16,39 @@
               <div class="col-sm-12">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Add new Question </h4>
+                    <h4 class="card-title" translate>New Question </h4>
                   </div>
                   <div class="card-body">
                     <div class="card-block">
                       <form #f="ngForm" (ngSubmit)="onSaveQuestion(f.value)" novalidate>
                         <div class="form-group">
-                          <label class="control-label">Module:</label>
+                          <label class="control-label">Module</label>
                           <br>
                           <select class="form-control" [(ngModel)]="ModuleName" name="module" (change)="update()"  (blur)="leaveSelect()">
                             <option *ngFor="let m of modules" [ngValue]="m">{{m.nom}}</option>
                           </select>
                           <div *ngIf="showNotifSuccess">
                             <li class="list-group-item list-group-item-action list-group-item-success">
-                              <p> Your reached the minimum number of questions in module : <b> {{ module.nom }}</b> </p>
-                              Add more if you want
+                              <p translate> SuccesNumberQuestion  <b> {{ module.nom }}</b> </p>
+                              <p translate> Add more if you want</p>
                             </li>
                           </div>
                           <div *ngIf="showNotifWarning">
                             <li class="list-group-item list-group-item-action list-group-item-warning">
-                              <p> You need to submit at least  <span class="badge badge-danger"> {{ module.nbr_questions-module.quiz.length}}</span> questions in module : <b>{{ module.nom }}</b></p>
+                              <p > <span translate You need to submit at least></span>  <span class="badge badge-danger"> {{ module.nbr_questions-module.quiz.length}}</span> <span translate> questions in module </span> <b>{{ module.nom }}</b></p>
                             </li>
                           </div>
                           <br>
-                          <label class="control-label">Question:</label>
+                          <label class="control-label">Question</label>
                           <input class="form-control" ngModel="" type="text" name="questionName"
                                  placeholder="Question Name" required/>
                           <br>
-                          <label class="control-label">Answer:</label>
+                          <label class="control-label" translate >Answers</label>
                           <hr>
                           <input class="form-control" ngModel="" type="text" name="choice1"
                                  placeholder="Answer option 1" required/>
                           <br>
-                          <label class="container"> Correct answer
+                          <label class="container" translate> Correct answer
                             <input type="checkbox" [(ngModel)]="isChecked1" name="checkbox1" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
@@ -56,7 +56,7 @@
                           <input class="form-control" ngModel="" type="text" name="choice2"
                                  placeholder="Answer option 2" required/>
                           <br>
-                          <label class="container">Correct answer
+                          <label class="container" translate>Correct answer
                             <input type="checkbox" [(ngModel)]="isChecked2" name="checkbox2" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
@@ -64,7 +64,7 @@
                           <input class="form-control" ngModel="" type="text" name="choice3"
                                  placeholder="Answer option 3" required/>
                           <br>
-                          <label class="container">Correct answer
+                          <label class="container" translate>Correct answer
                             <input type="checkbox" [(ngModel)]="isChecked3" name="checkbox3" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
@@ -72,15 +72,15 @@
                           <input class="form-control" ngModel="" type="text" name="choice4"
                                  placeholder="Answer option 1" required/>
                           <br>
-                          <label class="container">Correct answer
+                          <label class="container" translate>Correct answer
                             <input type="checkbox" [(ngModel)]="isChecked4" name="checkbox4" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
                         </div>
                         <br>
                         <br>
-                        <button [disabled]="!f.valid" type="submit" class="btn btn-primary">Save</button>
-                        <button type="button" (click)="returnToQuiz()" class="btn btn-danger">Cancel</button>
+                        <button [disabled]="!f.valid" type="submit" class="btn btn-primary" translate>Save</button>
+                        <button type="button" (click)="returnToQuiz()" class="btn btn-danger" translate>Cancel</button>
                       </form>
                     </div>
                   </div>
