--- a/src/app/pages/quiz/quiz-test/update-quiz/update-quiz.component.html
+++ b/src/app/pages/quiz/quiz-test/update-quiz/update-quiz.component.html
@@ -16,30 +16,30 @@
               <div class="col-sm-12">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Update Quiz </h4>
+                    <h4 class="card-title" translate>Update Quiz </h4>
                   </div>
                   <div class="card-body">
                     <div class="card-block">
                       <form #f="ngForm">
                         <div class="form-group">
-                          <label class="control-label">Module:</label>
+                          <label class="control-label">Module</label>
                           <br>
                           <select class="form-control" [(ngModel)]="moduleName" name="module" (change)="update()">
                             <option *ngFor="let m of modules" [ngValue]="m.nom">{{m.nom}}</option>
                           </select>
                           <br>
-                          <label class="control-label">Question:</label>
+                          <label class="control-label">Question</label>
                           <input class="form-control" [(ngModel)]="quiz.questionName" type="text" name="questionName"
                                  placeholder="Question Name" required/>
                           <input type="hidden" [(ngModel)]="quiz.id" name="id"/>
                           <br>
                           <br>
-                          <label class="control-label">Answer:</label>
+                          <label class="control-label" translate>Answers</label>
                           <hr>
                           <input class="form-control" [(ngModel)]="quiz.choice1" type="text" name="choice1"
                                  placeholder="Answer option 1" required/>
                           <br>
-                          <label class="container"> Correct answer
+                          <label class="container" translate> Correct answer
                             <input type="checkbox" [(ngModel)]="quiz.checkbox1" name="checkbox1" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
@@ -47,7 +47,7 @@
                           <input class="form-control" [(ngModel)]="quiz.choice2" type="text" name="choice2"
                                  placeholder="Answer option 2" required/>
                           <br>
-                          <label class="container">Correct answer
+                          <label class="container" translate>Correct answer
                             <input type="checkbox" [(ngModel)]="quiz.checkbox2" name="checkbox2" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
@@ -55,7 +55,7 @@
                           <input class="form-control" [(ngModel)]="quiz.choice3" type="text" name="choice3"
                                  placeholder="Answer option 3" required/>
                           <br>
-                          <label class="container">Correct answer
+                          <label class="container" translate>Correct answer
                             <input type="checkbox" [(ngModel)]="quiz.checkbox3" name="checkbox3" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
@@ -63,15 +63,15 @@
                           <input class="form-control" [(ngModel)]="quiz.choice4" type="text" name="choice4"
                                  placeholder="Answer option 1" required/>
                           <br>
-                          <label class="container">Correct answer
+                          <label class="container" translate>Correct answer
                             <input type="checkbox" [(ngModel)]="quiz.checkbox4" name="checkbox4" value="true">
                             <span class="checkmark"></span>
                           </label><br/>
                         </div>
                         <br>
                         <br>
-                        <button (click)="onUpdateQuiz()" class="btn btn-primary">Save</button>
-                        <button type="button" (click)="returnToQuiz()" class="btn btn-danger">Cancel</button>
+                        <button (click)="onUpdateQuiz()" class="btn btn-primary" translate>Save</button>
+                        <button type="button" (click)="returnToQuiz()" class="btn btn-danger" translate>Cancel</button>
                       </form>
                     </div>
                   </div>
