--- a/src/app/pages/videos/add-video/add-video.component.html
+++ b/src/app/pages/videos/add-video/add-video.component.html
@@ -21,26 +21,27 @@
 
                         <div class="modal-body">
                           <form #f="ngForm" (ngSubmit)="onRegister(f.value)">
+                            <label>Module</label>
                             <select  class="form-control" [(ngModel)]="ModuleName" name="module">
                               <option *ngFor="let m of modules" [ngValue]="m">{{m.nom}}</option>
                             </select>
                             <br>
                             <div class="form-group">
-                              <label class="control-label">Video Name: </label>
+                              <label class="control-label" translate>Name</label>
                               <input class="form-control" ngModel="" type="text" name="name" required/>
                             </div>
                             <div class="form-group">
-                              <label class="control-label">URL: </label>
+                              <label class="control-label">URL</label>
                               <input class="form-control" ngModel="" type="text" name="url" #url="ngModel" url required/>
                               <p class="alert alert-danger" *ngIf="url?.errors?.url">url error</p>
                             </div>
                             <div class="form-group">
-                              <label class="control-label">Description:</label>
+                              <label class="control-label">Description</label>
                               <textarea class="form-control" ngModel="" type="text" name="description" required></textarea>
                             </div>
                               <div class="form-group">
-                                <button type="submit" [disabled]="!f.valid" data-dismiss="modal" class="btn btn-success">Submit</button>
-                                <button type="button" class="btn btn-danger" (click)="close()">Close</button>
+                                <button type="submit" [disabled]="!f.valid" data-dismiss="modal" class="btn btn-success" translate>Save</button>
+                                <button type="button" class="btn btn-danger" (click)="close()" translate>Cancel</button>
                               </div>
                           </form>
                         </div>
