--- a/src/app/pages/watch-videos/watch-videos.component.html
+++ b/src/app/pages/watch-videos/watch-videos.component.html
@@ -25,7 +25,7 @@
                               <img src="../../../assets/img/gallery/1.jpg" />
                               <figcaption>
                                 <h2>{{m.nom}}</h2>
-                                <p> Preview Subjects <span class="ft-play-circle font-medium-2"> </span></p>
+                                <p translate>Preview Subjects<span class="ft-play-circle font-medium-2"> </span></p>
                               </figcaption>
                             </figure>
                           </div>
