--- a/src/app/layouts/full/full-layout.component.html
+++ b/src/app/layouts/full/full-layout.component.html
@@ -6,11 +6,15 @@
   </div>
   <div class="main-panel">
     <app-navbar></app-navbar>
-    <div *ngIf="this.roleSession === 'ADMIN ROLE'">
-      <div class="main-content">
-        <div class="content-wrapper">
-          <div class="container-fluid">
-            <router-outlet></router-outlet>
+
+
+    <div class="main-content">
+      <div class="content-wrapper">
+        <div class="container-fluid">
+          <router-outlet></router-outlet>
+
+
+          <div *ngIf="this.roleSession === 'ADMIN ROLE'">
             <div class="row">
               <div class="col-xl-3 col-lg-6 col-md-6 col-12">
                 <div class="card gradient-blackberry">
@@ -19,7 +23,7 @@
                       <div class="media">
                         <div class="media-body white text-left">
                           <h3 class="font-large-1 mb-0">{{users.length}}</h3>
-                          <span>Total Users</span>
+                          <span translate>Total Users</span>
                         </div>
                         <div class="media-right white text-right">
                           <i class="icon-users font-large-1"></i>
@@ -37,7 +41,7 @@
                       <div class="media">
                         <div class="media-body white text-left">
                           <h3 class="font-large-1 mb-0">{{documents.length}}</h3>
-                          <span>Total documents</span>
+                          <span translate>Total documents</span>
                         </div>
                         <div class="media-right white text-right">
                           <i class="icon-layers font-large-1"></i>
@@ -55,7 +59,7 @@
                       <div class="media">
                         <div class="media-body white text-left">
                           <h3 class="font-large-1 mb-0">{{videos.length}}</h3>
-                          <span>Total videos</span>
+                          <span translate>Total videos</span>
                         </div>
                         <div class="media-right white text-right">
                           <i class="icon-social-youtube font-large-1"></i>
@@ -73,7 +77,7 @@
                       <div class="media">
                         <div class="media-body white text-left">
                           <h3 class="font-large-1 mb-0">{{modules.length}}</h3>
-                          <span>Total Modules</span>
+                          <span translate>Total Modules</span>
                         </div>
                         <div class="media-right white text-right">
                           <i class="icon-docs font-large-1"></i>
@@ -87,14 +91,14 @@
               <div class="col-xl-4 col-lg-12">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title mb-0">Suggested Document</h4>
+                    <h4 class="card-title mb-0" translate>Suggested Document</h4>
                   </div>
                   <div class="card-body">
                     <div class="card-block">
                       <div *ngIf="NonAcceptedDocuments.length === 0 ">
                         <a class="warning">
                           <i class="ft-info font-medium-3 mr-2"> </i>
-                          No suggested documents
+                          <p translate>No suggested documents</p>
                         </a>
                       </div>
                       <div *ngFor=" let d of NonAcceptedDocuments ">
@@ -105,7 +109,7 @@
                           </a>
                           <div class="media-body">
                             <h4 class="font-medium-1 mt-1 mb-0">{{d.documentName}}</h4>
-                            <p class="text-muted font-small-3">By {{d.user.username}}</p>
+                            <p class="text-muted font-small-3"><a translate>By</a> {{d.user.username}}</p>
                           </div>
                           <div class="mt-1">
                             <a class="success p-0">
@@ -120,15 +124,314 @@
 
                       </div>
                     </div>
+
                   </div>
                 </div>
               </div>
 
+              <div class="col-xl-4 col-lg-12">
+                <div class="card">
+                  <div class="card-header">
+                    <h4 class="card-title mb-0" translate>User complaint</h4>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-block">
+                      <div *ngIf="NonAcceptedDocuments.length === 0 ">
+                        <a class="warning">
+                          <i class="ft-info font-medium-3 mr-2"> </i>
+                          <p translate>No suggested documents</p>
+                        </a>
+                      </div>
+                      <div *ngFor=" let msg of messages ">
+                        <div class="media mb-1">
+                          <div class="media-body">
+                            <h4 class="font-medium-1 mt-1 mb-0">{{msg.message}}</h4>
+                            <p class="text-muted font-small-3"><a translate>By</a> {{msg.user.username}}</p>
+
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Starts-->
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card">
+                  <div class="card-header">
+                    <h4 class="card-title" translate>Events</h4>
+                    <p translate>Participated Users in events</p>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-block">
+                      <ul class="list-group">
+                        <div *ngFor="let e of events">
+                          <li class="list-group-item">
+                            <b> {{ e.title}} </b>   <span class="badge badge-success mr-2"> {{e.user.length}}</span>
+                            <div *ngFor="let u of e.user">
+                              {{u.username}}
+                            </div>
+                          </li>
+                        </div>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Ends-->
+
+              <!--List Group with badges Starts-->
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card">
+                  <div class="card-header">
+                    <h4 class="card-title">Score</h4>
+                    <p translate>Score Users in every module</p>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-block">
+                      <ul class="list-group">
+                        <div *ngFor="let m of moduleScoreAllUser">
+                          <li class="list-group-item">
+                            <b> {{ m.user.username}} </b>  :  <b> {{m.module.nom}} </b><span class="badge badge-info mr-2">{{m.score}}</span>
+                          </li>
+                        </div>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Ends-->
+
+
+
+
+            </div>
+          </div>
+
+          <div *ngIf="this.roleSession === 'USER ROLE'">
+            <div class="row">
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-blackberry">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{events.length}}</h3>
+                          <span translate>Total Events</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-calendar font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-ibiza-sunset">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{documents.length}}</h3>
+                          <span translate>Total documents</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-layers font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-green-tea">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{videos.length}}</h3>
+                          <span translate >Total videos</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-social-youtube font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-pomegranate">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{modules.length}}</h3>
+                          <span translate>Total Modules</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-docs font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Starts-->
+              <div class="col-sm-12 col-md-6 col-lg-7">
+                <div class="card">
+                  <div class="card-header">
+                    <h4 class="card-title">Score</h4>
+                    <p translate>Your Score in every module</p>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-block">
+                      <ul class="list-group">
+                        <div *ngFor="let m of moduleScoreByUser">
+
+                          <li class="list-group-item">
+                            Score <b>{{m.module}} </b><span class="badge badge-info mr-2">{{m.score}}</span>
+                            <br> <p translate>Minimum score to pass this module<span class="badge badge-danger mr-2">{{m.minScore}}</span></p>
+                          </li>
+                        </div>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Ends-->
+            </div>
+          </div>
+
+          <div *ngIf="this.roleSession === 'FORMATEUR ROLE'">
+            <div class="row">
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-blackberry">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{events.length}}</h3>
+                          <span translate>Total events</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-calendar font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-ibiza-sunset">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{documents.length}}</h3>
+                          <span translate>Total documents</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-layers font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-green-tea">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{videos.length}}</h3>
+                          <span translate>Total videos</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-social-youtube font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xl-3 col-lg-6 col-md-6 col-12">
+                <div class="card gradient-pomegranate">
+                  <div class="card-body">
+                    <div class="card-block pt-2 pb-0">
+                      <div class="media">
+                        <div class="media-body white text-left">
+                          <h3 class="font-large-1 mb-0">{{modules.length}}</h3>
+                          <span translate>Total Modules</span>
+                        </div>
+                        <div class="media-right white text-right">
+                          <i class="icon-docs font-large-1"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Starts-->
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card">
+                  <div class="card-header">
+                    <h4 class="card-title">Score</h4>
+                    <p translate>Score Users in every module</p>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-block">
+                      <ul class="list-group">
+                        <div *ngFor="let m of moduleScoreAllUser">
+                          <li class="list-group-item">
+                            <b> {{ m.user.username}} </b>  :  <b> {{m.module.nom}} </b><span class="badge badge-info mr-2">{{m.score}}</span>
+                          </li>
+                        </div>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Ends-->
+              <!--List Group with badges Starts-->
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card">
+                  <div class="card-header">
+                    <h4 class="card-title" translate>Events</h4>
+                    <p translate> Participated Users in events </p>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-block">
+                      <ul class="list-group">
+                        <div *ngFor="let e of events">
+                          <li class="list-group-item">
+                            <b> {{ e.title}} </b>   <span class="badge badge-success mr-2"> {{e.user.length}}</span>
+                            <div *ngFor="let u of e.user">
+                              {{u.username}}
+                            </div>
+                          </li>
+                        </div>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--List Group with badges Ends-->
             </div>
           </div>
         </div>
       </div>
     </div>
+
 
   </div>
 </div>
