--- a/src/app/pages/broadcast-by-user/broadcast-by-user.component.html
+++ b/src/app/pages/broadcast-by-user/broadcast-by-user.component.html
@@ -14,7 +14,7 @@
               <div class="col-sm-12">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Get Started </h4>
+                    <h4 class="card-title" translate>Get Started </h4>
                   </div>
                   <div class="card-body">
                     <div class="card-block">
