--- a/src/app/pages/quiz/module/update-module/update-module.component.html
+++ b/src/app/pages/quiz/module/update-module/update-module.component.html
@@ -12,21 +12,21 @@
             <div class="col-sm-12">
               <div class="card">
                 <div class="card-header">
-                  <h4 class="card-title">Update Module </h4>
+                  <h4 class="card-title" translate>Update Module </h4>
                 </div>
                 <div class="card-body">
                   <div class="card-block">
                     <!-- formumaire update starts-->
-                    Module Name
+                    <p translate >Module Name</p>
                     <input class="form-control" [(ngModel)]="module.nom" type="text" placeholder="Module Name" required/>
                     <br>
-                    Duration
+                    <label translate>Duration</label>
                     <input class="form-control" [(ngModel)]="module.duree" type="text" placeholder="Module duration (minute)" required/>
                     <br>
-                    Number of question
+                    <label translate>Number of questions</label>
                     <input class="form-control" [(ngModel)]="module.nbr_questions" type="text" placeholder="Module number of questions" required/>
                     <br>
-                    Level
+                    <label translate>Level</label>
                     <select  class="form-control"  name="level" [(ngModel)]="module.level">
                       <option value="1">Level 1</option>
                       <option value="2">Level 2</option>
@@ -37,8 +37,8 @@
                       <option value="7">Level 7</option>
                       <option value="8">Level 8</option>
                     </select> <br> <br>
-                    <button class="btn btn-success" (click)="update()" >Save </button>
-                    <button type="button" (click)="returnToModule()" class="btn btn-danger">Cancel</button>
+                    <button class="btn btn-success" (click)="update()" translate>Save </button>
+                    <button type="button" (click)="returnToModule()" class="btn btn-danger" translate>Cancel</button>
                     <!-- formumaire update starts-->
                   </div>
                 </div>
