--- a/src/app/pages/users/list/users.component.html
+++ b/src/app/pages/users/list/users.component.html
@@ -16,13 +16,13 @@
               <div class="col-sm-12">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Users </h4>
+                    <h4 class="card-title" translate>Users </h4>
                   </div>
                   <div class="card-body">
                     <div class="card-block">
-                      <input type="text" [(ngModel)]="searchText" name="searchText" placeholder="Search...">
+                      <input type="text" [(ngModel)]="searchText" name="searchText" placeholder="{{'Search...' | translate}}">
                       <hr>
-                      <button type="button" class="btn btn-primary btn-raised" (click)="register()" >New User </button>
+                      <button type="button" class="btn btn-primary btn-raised" (click)="register()" translate>New User</button>
                       <table show-filter="true" class="table">
                         <thead>
                         <tr>
