--- a/src/app/pages/users/register/register.component.html
+++ b/src/app/pages/users/register/register.component.html
@@ -14,7 +14,7 @@
               <div class="col-sm-12">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Add New User </h4>
+                    <h4 class="card-title" translate>New User</h4>
                   </div>
                   <div class="card-body">
                     <div class="card-block">
@@ -32,15 +32,15 @@
                           </select>
                         </div>
                         <div class="form-group">
-                          <label class="control-label">Password:</label>
+                          <label class="control-label" translate>Password:</label>
                           <input class="form-control" ngModel="" type="password" name="password" required/>
                         </div>
                         <div class="form-group">
                           <label class="control-label">Repassword:</label>
                           <input class="form-control" ngModel="" type="password" name="repassword" required/>
                         </div>
-                        <button [disabled]="!f.valid" type="submit" class="btn btn-success">Submit</button>
-                        <button  (click)="OnCancel()" class="btn btn-danger" value="Submit">Cancel</button>
+                        <button [disabled]="!f.valid" type="submit" class="btn btn-success" translate>Save</button>
+                        <button  (click)="OnCancel()" class="btn btn-danger" value="Submit" translate>Cancel</button>
                       </form>
                       <!--Formulaire Starts-->
                     </div>
